Opened 2 years ago
Closed 2 years ago
#18081 closed bug (fixed)
Read-only mount attribute not remembered across reboot
Reported by: | thebuck | Owned by: | stippi |
---|---|---|---|
Priority: | high | Milestone: | R1/beta5 |
Component: | Servers/mount_server | Version: | R1/beta4 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
R1beta4tc0, automount settings:
- automatic mount: (1st) do not auto-mount
- mount at boot: (2nd) mount previously mounted disks
But my previously read-only mounted EXT filesystem is mounted read-write on next boot.
At the same time another previously not-mounted EXT is correctly not mounted.
Haiku booted from a MBR partitioned thumbdrive (with handcrafted MBR, BeFS partition extracted from iso, dd'ed to partition, makebootabletiny).
Set failsafe video in bootmenu.
x86_64.
MBR partition table where the EXTs reside.
Traditional BIOS.
I do not know of any working hrev.
Increases chance of data loss, so setting to high priority. Guessed component.
Attachments (1)
Change History (9)
comment:1 by , 2 years ago
Description: | modified (diff) |
---|
follow-up: 3 comment:2 by , 2 years ago
comment:4 by , 2 years ago
[Back on B4TC0] Same also with:
GPT partition table
+ NTFS (Windows (C:), but not the Recovery which can only mount ro)
+ FAT32 (the EFI system partition)
+ EXT4
On this machine, R1beta3 cannot get to a working desktop (I believe it worked in the past, however...)
comment:5 by , 2 years ago
NO DIFFERENCE in /Haiku/home/config/settings/mount_server (view BeFS using Linux) after having mounted ro versus rw.
by , 2 years ago
Attachment: | SYSTEM-mounted.txt added |
---|
Mounting did not update the file, so this is from after a reboot
comment:7 by , 2 years ago
The mount server's MountArchivedVisitor looks for a mountFlags member of this settings message before mounting a partition, but ArchiveVisitor::Visit isn't adding this member to the settings.
I uploaded a possible fix: https://review.haiku-os.org/c/haiku/+/6080.
comment:8 by , 2 years ago
Milestone: | Unscheduled → R1/beta5 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Patch merged in hrev56786
Does it work on beta3? Or is there the same behavior?