mount_server:  remember read-only attribute

* Record the read-only status of a partition in settings/mount_server
  so it will be applied if automatically mounting on next boot.
* To ensure BPartition::IsReadOnly and KPartition::IsReadOnly give
  accurate results, have the VFS update a KPartition flag when the
  partition is mounted.
* Don't consult IsReadOnly when deciding whether to prompt the user to
  mount read-only.  Otherwise, after the above change, the drive
  will mount as read-write if it is mounted again after being mounted as
  read-only earlier in the same session.
* Fixes #18081.

Change-Id: Idd7267fd356f35689bb6ad79de4a45bf071164f1